syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "AbilityControlBlock.proto";
import "AbilitySyncStateInfo.proto";
import "ServerBuff.proto";
import "SceneEntityInfo.proto";
import "AvatarInfo.proto";
import "SceneAvatarInfo.proto";

message SceneTeamAvatar {
	uint64 weapon_guid = 11;
	AbilityControlBlock ability_control_block = 12;
	bool HNPEOLLNMKH = 13;
	uint64 avatar_guid = 15;
	AbilitySyncStateInfo avatar_ability_info = 3;
	uint32 player_uid = 8;
	repeated ServerBuff server_buff_list = 2;
	uint32 scene_id = 6;
	bool NNOFLAHCMLF = 9;
	AbilitySyncStateInfo weapon_ability_info = 10;
	SceneEntityInfo scene_entity_info = 14;
	AvatarInfo avatar_info = 1;
	bool CMBLAHFAGMD = 1504;
	SceneAvatarInfo scene_avatar_info = 7;
	uint32 weapon_entity_id = 5;
	uint32 entity_id = 4;
}
