syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// CmdId: 4046
// Name: BFDHKNPNICA
message SetPlayerHeadImageReq {
    uint32 avatar_id = 6;
}

